single post view, tags

--- a/frontend/public/partials/newPostForm.html
+++ b/frontend/public/partials/newPostForm.html
@@ -12,6 +12,10 @@
         <textarea id="content" type="textarea" class="validate white-text materialize-textarea" ng-model="content"></textarea>
         <label for="content">Content</label>
     </div>
-    <div class="chips"></div>
+    <div class="input-field col s6">
+        <textarea id="tags" type="text" class="validate white-text materialize-textarea" ng-model="tags"></textarea>
+        <label for="tags">Tags</label>
+    </div>
+
     <button class="waves-effect waves-light btn blue darken-3" type="submit">Submit</button>
 </form>
