--- a/frontend/public/partials/newPostForm.html
+++ b/frontend/public/partials/newPostForm.html
@@ -1,21 +1,25 @@
 <!-- Modal Structure -->
-<form name="$ctrl.postForm" ng-submit="$ctrl.submit()">
-    <div class="input-field col s6">
-        <input id="title" type="text" class="validate white-text" ng-model="title">
-        <label for="title">Title</label>
+<div class="card blue darken-3 col-s9">
+    <div class="card-content">
+        <form name="$ctrl.postForm" ng-submit="$ctrl.submit()">
+            <div class="input-field col s6">
+                <input id="title" type="text" class="validate white-text" ng-model="title">
+                <label for="title">Title</label>
+            </div>
+            <div class="input-field col s6">
+                <input id="subtitle" type="text" class="validate white-text" ng-model="subtitle">
+                <label for="subtitle">Subtitle</label>
+            </div>
+            <div class="input-field col s6">
+                <textarea id="content" type="textarea" class="validate white-text materialize-textarea" ng-model="content"></textarea>
+                <label for="content">Content</label>
+            </div>
+            <div class="input-field col s6">
+                <input id="tags" type="text" class="validate white-text" ng-model="tags"></input>
+                <label for="tags">Tags</label>
+            </div>
+        
+            <button class="waves-effect waves-light btn white blue-text darken-text-3" type="submit">Submit</button>
+        </form>
     </div>
-    <div class="input-field col s6">
-        <input id="subtitle" type="text" class="validate white-text" ng-model="subtitle">
-        <label for="subtitle">Subtitle</label>
-    </div>
-    <div class="input-field col s6">
-        <textarea id="content" type="textarea" class="validate white-text materialize-textarea" ng-model="content"></textarea>
-        <label for="content">Content</label>
-    </div>
-    <div class="input-field col s6">
-        <textarea id="tags" type="text" class="validate white-text materialize-textarea" ng-model="tags"></textarea>
-        <label for="tags">Tags</label>
-    </div>
-
-    <button class="waves-effect waves-light btn blue darken-3" type="submit">Submit</button>
-</form>
+</div>
