--- a/frontend/public/partials/singlePost.html
+++ b/frontend/public/partials/singlePost.html
@@ -3,7 +3,7 @@
         <div class="card-content">
             <h2 class="white-text">{{$ctrl.$scope.post.title}}</h2>
             <h5 class="blue-text text-lighten-3">{{$ctrl.$scope.post.subtitle}}</h5>
-            <p class="blue-text text-lighten-5">{{$ctrl.$scope.post.content}}</p>
+            <p class="blue-text text-lighten-5 flow-text">{{$ctrl.$scope.post.content}}</p>
         </div>
         <div ng-if="$ctrl.$scope.post.tags" class="card-action">
             <span class="blue-text text-lighten-2">Tags</span>
